# godot-lsp-bridge

./: .gitignore  .lsp.json  Cargo.toml  README.md  install.ps1  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: release.yml
.github/workflows/: ci.yml  main.yml  release.yml
docs/: setup.md
src/: bridge.rs  config.rs  discovery.rs  doctor.rs  framing.rs  lib.rs  main.rs  synthesizer.rs  update.rs
tests/: integration.rs
