[package]
name        = "godot-lsp-bridge"
version     = "1.1.0"
edition     = "2021"
description = "High-performance Rust proxy bridging Godot's TCP Language Server to Stdio for Claude Code"
license     = "MPL-2.0"
repository  = "https://github.com/Pixel-Directive-LLC/godot-lsp-bridge"
keywords    = ["godot", "lsp", "language-server", "proxy", "claude-code"]
categories  = ["development-tools", "network-programming"]

[lib]
name = "godot_lsp_bridge"
path = "src/lib.rs"

[[bin]]
name = "godot-lsp-bridge"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio       = { version = "1", features = ["full"] }

# CLI argument parsing
clap        = { version = "4", features = ["derive"] }

# Binary error propagation
anyhow      = "1"

# JSON-RPC / LSP message (de)serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Structured logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# Async combinators (join_all for parallel port probing)
futures             = { version = "0.3", default-features = false, features = ["alloc"] }

# HTTP client for update subcommand (rustls avoids OpenSSL dep on all platforms)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Platform config/home directory resolution
dirs = "5"

# Archive extraction for update subcommand
flate2 = "1"
tar    = "0.4"
zip    = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
# Fast test runner (used via `cargo nextest`)
# nextest itself is a Cargo plugin; no lib dep needed here.
tokio-test = "0.4"

# cargo-binstall metadata — maps release asset names to install targets.
# Asset naming convention: godot-lsp-bridge-{target}.tar.gz / .zip (Windows)
# See: https://github.com/cargo-bins/cargo-binstall
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides."x86_64-pc-windows-msvc"]
pkg-fmt = "zip"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = "symbols"
